layout of the website

--- a/pages/styles/globals.css
+++ b/pages/styles/globals.css
@@ -25,3 +25,15 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@keyframes rolling {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.rolling-image {
+  animation: rolling 2s ease-out;
+}
